--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Raghul M - Resume</title>
   <link rel="stylesheet" href="styles.css">
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="https://w7.pngwing.com/pngs/467/238/png-transparent-blue-letter-r-logo-r-logo-icon-creative-letter-r-blue-text-trademark-thumbnail.png">
 </head>
 <body>
   <header>
@@ -20,64 +22,76 @@
     </nav>
   </header>
 
-  <section id="about" class="section">
-    <div class="container">
-      <h2>About Me</h2>
-      <p>A dedicated and ambitious professional with a Bachelor's degree in Computer Science and Engineering, eager to leverage expertise in Python and Data Structures to excel in dynamic environments. Seeking challenging opportunities to contribute towards organizational goals, while continuously enhancing skills and knowledge in the field of computer science.</p>
-    </div>
-  </section>
+  <main>
+    <section id="about" class="section">
+      <div class="container">
+        <h2>About Me</h2>
+        <p>A dedicated and ambitious professional with a Bachelor's degree in Computer Science and Engineering, eager to leverage expertise in Python and Data Structures to excel in dynamic environments. Seeking challenging opportunities to contribute towards organizational goals, while continuously enhancing skills and knowledge in the field of computer science.</p>
+      </div>
+    </section>
 
-  <section id="education" class="section">
-    <div class="container">
-      <h2>Education</h2>
-      <p><strong>Bachelor of Engineering (B.E) - Computer Science and Engineering</strong><br>
-      Velalar College of Engineering and Technology, 2023<br>
-      CGPA: 7.85</p>
+    <section id="education" class="section">
+      <div class="container">
+        <h2>Education</h2>
+        <ul>
+          <li>
+            <strong>Bachelor of Engineering (B.E) - Computer Science and Engineering</strong><br>
+            Velalar College of Engineering and Technology, 2023<br>
+            CGPA: 7.85
+          </li>
+          <li>
+            <strong>Higher Secondary Certificate (HSC)</strong><br>
+            Grace Metric Higher Secondary School, 2019<br>
+            Percentage: 63.33%
+          </li>
+          <li>
+            <strong>Secondary School Leaving Certificate (SSLC)</strong><br>
+            Sri Vasavi Matriculation School, 2017<br>
+            Percentage: 76.80%
+          </li>
+        </ul>
+      </div>
+    </section>
 
-      <p><strong>Higher Secondary Certificate (HSC)</strong><br>
-      Grace Metric Higher Secondary School, 2019<br>
-      Percentage: 63.33%</p>
+    <section id="skills" class="section">
+      <div class="container">
+        <h2>Skills</h2>
+        <ul>
+          <li>Python</li>
+          <li>Data Structures</li>
+        </ul>
+      </div>
+    </section>
 
-      <p><strong>Secondary School Leaving Certificate (SSLC)</strong><br>
-      Sri Vasavi Matriculation School, 2017<br>
-      Percentage: 76.80%</p>
-    </div>
-  </section>
+    <section id="projects" class="section">
+      <div class="container">
+        <h2>Projects</h2>
+        <div class="project">
+          <h3>Anti-sleep Detection and Alarming System for Drivers (Mini Project)</h3>
+          <p>The goal of this project is to develop a system that can accurately detect sleepy driving and make alarms accordingly, which aims to prevent drivers from drowsy driving and create a safer driving environment.</p>
+        </div>
+        <div class="project">
+          <h3>FAKE MEDIA DETECTION BASED ON NLP AND BLOCKCHAIN APPROACHES</h3>
+          <p>Description: Led development of a system integrating blockchain, NLP, and AI to detect fake news in web-based entertainment networks. Implemented decentralized security model and AI-based detection framework.<br>
+          Impact: Improved information quality and user trust in online content. Pioneered novel approach to content verification.</p>
+        </div>
+        <!-- Other projects will be added dynamically -->
+      </div>
+    </section>
 
-  <section id="skills" class="section">
-    <div class="container">
-      <h2>Skills</h2>
-      <ul>
-        <li>Python</li>
-        <li>Data Structures</li>
-      </ul>
-    </div>
-  </section>
-
-  <section id="projects" class="section">
-    <div class="container">
-      <h2>Projects</h2>
-      <h3>Anti-sleep Detection and Alarming System for Drivers (Mini Project)</h3>
-      <p>The goal of this project is to develop a system that can accurately detect sleepy driving and make alarms accordingly, which aims to prevent drivers from drowsy driving and create a safer driving environment.</p>
-      
-      <h3>FAKE MEDIA DETECTION BASED ON NLP AND BLOCKCHAIN APPROACHES</h3>
-      <p>Description: Led development of a system integrating blockchain, NLP, and AI to detect fake news in web-based entertainment networks. Implemented decentralized security model and AI-based detection framework.<br>
-      Impact: Improved information quality and user trust in online content. Pioneered novel approach to content verification.</p>
-    </div>
-  </section>
-
-  <section id="contact" class="section">
-    <div class="container">
-      <h2>Contact</h2>
-      <p>Email: raghul.m2.2002@gmail.com<br>
-      Phone: 7539951358<br>
-      Address: 13, StarLine, Amaravati Nagar, Erode - 638005</p>
-    </div>
-  </section>
+    <section id="contact" class="section">
+      <div class="container">
+        <h2>Contact</h2>
+        <p>Email: raghul.m2.2002@gmail.com<br>
+        Phone: 7539951358<br>
+        Address: 13, StarLine, Amaravati Nagar, Erode - 638005</p>
+      </div>
+    </section>
+  </main>
 
   <footer>
     <div class="container">
-      <p>&copy; 2024 Raghul M - All rights reserved</p>
+      <p>Raghul M</p>
     </div>
   </footer>
 
