--- a/index.html
+++ b/index.html
@@ -74,6 +74,21 @@
           <h3>FAKE MEDIA DETECTION BASED ON NLP AND BLOCKCHAIN APPROACHES</h3>
           <p>Description: Led development of a system integrating blockchain, NLP, and AI to detect fake news in web-based entertainment networks. Implemented decentralized security model and AI-based detection framework.<br>
           Impact: Improved information quality and user trust in online content. Pioneered novel approach to content verification.</p>
+          <!-- Additional Projects -->
+      <h3>Binary Tree Path Finder: Implementing DFS and BFS</h3>
+      <p>Implemented Depth-First Search (DFS) and Breadth-First Search (BFS) algorithms to find paths in binary trees.</p>
+
+      <h3>Graph Clustering and Community Detection: Modularity Optimization</h3>
+      <p>Implemented modularity optimization algorithm for clustering and detecting communities within graphs.</p>
+
+      <h3>Maze Solver: Applying BFS and DFS to Find Paths</h3>
+      <p>Implemented BFS and DFS algorithms to find paths in a maze.</p>
+
+      <h3>Planarity Testing and Embedding</h3>
+      <p>Analyzed the embeddability of graphs in a plane, focusing on planarity testing and embedding algorithms.</p>
+
+      <h3>Topological Sorting: Ordering Dependencies in DAG</h3>
+      <p>Developed an algorithm for ordering dependencies in Directed Acyclic Graphs 
         </div>
         <!-- Other projects will be added dynamically -->
       </div>
