--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Raghul M - Resume</title>
   <link rel="stylesheet" href="styles.css">
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="https://w7.pngwing.com/pngs/467/238/png-transparent-blue-letter-r-logo-r-logo-icon-creative-letter-r-blue-text-trademark-thumbnail.png">
+  
 </head>
 <body>
   <header>
@@ -74,23 +73,27 @@
           <h3>FAKE MEDIA DETECTION BASED ON NLP AND BLOCKCHAIN APPROACHES</h3>
           <p>Description: Led development of a system integrating blockchain, NLP, and AI to detect fake news in web-based entertainment networks. Implemented decentralized security model and AI-based detection framework.<br>
           Impact: Improved information quality and user trust in online content. Pioneered novel approach to content verification.</p>
-          <!-- Additional Projects -->
-      <h3>Binary Tree Path Finder: Implementing DFS and BFS</h3>
-      <p>Implemented Depth-First Search (DFS) and Breadth-First Search (BFS) algorithms to find paths in binary trees.</p>
-
-      <h3>Graph Clustering and Community Detection: Modularity Optimization</h3>
-      <p>Implemented modularity optimization algorithm for clustering and detecting communities within graphs.</p>
-
-      <h3>Maze Solver: Applying BFS and DFS to Find Paths</h3>
-      <p>Implemented BFS and DFS algorithms to find paths in a maze.</p>
-
-      <h3>Planarity Testing and Embedding</h3>
-      <p>Analyzed the embeddability of graphs in a plane, focusing on planarity testing and embedding algorithms.</p>
-
-      <h3>Topological Sorting: Ordering Dependencies in DAG</h3>
-      <p>Developed an algorithm for ordering dependencies in Directed Acyclic Graphs 
         </div>
-        <!-- Other projects will be added dynamically -->
+        <div class="project">
+          <h3>Binary Tree Path Finder: Implementing DFS and BFS</h3>
+          <p>Implemented Depth-First Search (DFS) and Breadth-First Search (BFS) algorithms to find paths in binary trees.</p>
+        </div>
+        <div class="project">
+          <h3>Graph Clustering and Community Detection: Modularity Optimization</h3>
+          <p>Implemented modularity optimization algorithm for clustering and detecting communities within graphs.</p>
+        </div>
+        <div class="project">
+          <h3>Maze Solver: Applying BFS and DFS to Find Paths</h3>
+          <p>Implemented BFS and DFS algorithms to find paths in a maze.</p>
+        </div>
+        <div class="project">
+          <h3>Planarity Testing and Embedding</h3>
+          <p>Analyzed the embeddability of graphs in a plane, focusing on planarity testing and embedding algorithms.</p>
+        </div>
+        <div class="project">
+          <h3>Topological Sorting: Ordering Dependencies in DAG</h3>
+          <p>Developed an algorithm for ordering dependencies in Directed Acyclic Graphs</p>
+        </div>
       </div>
     </section>
 
@@ -104,11 +107,6 @@
     </section>
   </main>
 
-  <footer>
-    <div class="container">
-      <p>Raghul M</p>
-    </div>
-  </footer>
 
   <script src="scripts.js"></script>
 </body>
