--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Raghul M - Resume</title>
   <link rel="stylesheet" href="styles.css">
-  
 </head>
 <body>
   <header>
@@ -22,6 +21,12 @@
   </header>
 
   <main>
+    <section id="front" class="section active">
+      <div class="container">
+        <img src="https://www.shutterstock.com/image-photo/funny-cat-posing-sunglasses-600nw-1123229663.jpg" alt="Funny Cat">
+      </div>
+    </section>
+
     <section id="about" class="section">
       <div class="container">
         <h2>About Me</h2>
@@ -61,8 +66,7 @@
         </ul>
       </div>
     </section>
-
-    <section id="projects" class="section">
+ <section id="projects" class="section">
       <div class="container">
         <h2>Projects</h2>
         <div class="project">
@@ -97,16 +101,16 @@
       </div>
     </section>
 
+
     <section id="contact" class="section">
       <div class="container">
         <h2>Contact</h2>
         <p>Email: raghul.m2.2002@gmail.com<br>
-        Phone: 7539951358<br>
-        Address: 13, StarLine, Amaravati Nagar, Erode - 638005</p>
+        Phone: 1234567899<br>
+        Address: Earth 316 </p>
       </div>
     </section>
   </main>
-
 
   <script src="scripts.js"></script>
 </body>
