--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
         </ul>
       </div>
     </section>
- <section id="projects" class="section">
+
+    <section id="projects" class="section">
       <div class="container">
         <h2>Projects</h2>
         <div class="project">
@@ -101,13 +102,12 @@
       </div>
     </section>
 
-
     <section id="contact" class="section">
       <div class="container">
         <h2>Contact</h2>
         <p>Email: raghul.m2.2002@gmail.com<br>
-        Phone: 1234567899<br>
-        Address: Earth 316 </p>
+        Phone: 7539951358<br>
+        Address: 13, StarLine, Amaravati Nagar, Erode - 638005</p>
       </div>
     </section>
   </main>
