--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li><a href="#education">Education</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#projects">Projects</a></li>
+        <li><a href="#Certificate">Certificate</a></li> <!-- Highlighted line -->
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
@@ -27,10 +28,17 @@
       </div>
     </section>
 
-    <section id="about" class="section">
+     <section id="about" class="section">
       <div class="container">
         <h2>About Me</h2>
-        <p>A dedicated and ambitious professional with a Bachelor's degree in Computer Science and Engineering, eager to leverage expertise in Python and Data Structures to excel in dynamic environments. Seeking challenging opportunities to contribute towards organizational goals, while continuously enhancing skills and knowledge in the field of computer science.</p>
+        <ul>
+          <li>Recent graduate in Computer Science and Engineering, driven by a passion for applying technology to solve real-world problems.</li>
+          <li>Solid understanding of computer systems, algorithms, and software engineering principles.</li>
+          <li>Proficient in Python, with expertise in web development, data analysis, and automation.</li>
+          <li>Enthusiastic about exploring new technologies and methodologies to enhance problem-solving abilities.</li>
+          <li>Strong belief in the value of teamwork and effective communication for achieving goals efficiently.</li>
+          <li>Eager to contribute to innovative projects and make meaningful contributions in the dynamic field of technology.</li>
+        </ul>
       </div>
     </section>
 
@@ -67,7 +75,7 @@
       </div>
     </section>
 
-    <section id="projects" class="section">
+      <section id="projects" class="section">
       <div class="container">
         <h2>Projects</h2>
         <div class="project">
@@ -76,29 +84,71 @@
         </div>
         <div class="project">
           <h3>FAKE MEDIA DETECTION BASED ON NLP AND BLOCKCHAIN APPROACHES</h3>
-          <p>Description: Led development of a system integrating blockchain, NLP, and AI to detect fake news in web-based entertainment networks. Implemented decentralized security model and AI-based detection framework.<br>
-          Impact: Improved information quality and user trust in online content. Pioneered novel approach to content verification.</p>
+          <ul>
+            <li>Led development of a system integrating blockchain, NLP, and AI to detect fake news in web-based entertainment networks.</li>
+            <li>Implemented decentralized security model and AI-based detection framework.</li>
+            <li>Impact: Improved information quality and user trust in online content. Pioneered novel approach to content verification.</li>
+          </ul>
         </div>
-        <div class="project">
-          <h3>Binary Tree Path Finder: Implementing DFS and BFS</h3>
-          <p>Implemented Depth-First Search (DFS) and Breadth-First Search (BFS) algorithms to find paths in binary trees.</p>
-        </div>
-        <div class="project">
-          <h3>Graph Clustering and Community Detection: Modularity Optimization</h3>
-          <p>Implemented modularity optimization algorithm for clustering and detecting communities within graphs.</p>
-        </div>
-        <div class="project">
-          <h3>Maze Solver: Applying BFS and DFS to Find Paths</h3>
-          <p>Implemented BFS and DFS algorithms to find paths in a maze.</p>
-        </div>
-        <div class="project">
-          <h3>Planarity Testing and Embedding</h3>
-          <p>Analyzed the embeddability of graphs in a plane, focusing on planarity testing and embedding algorithms.</p>
-        </div>
-        <div class="project">
-          <h3>Topological Sorting: Ordering Dependencies in DAG</h3>
-          <p>Developed an algorithm for ordering dependencies in Directed Acyclic Graphs</p>
-        </div>
+    <div class="project">
+      <h3>Binary Tree Path Finder: Implementing DFS and BFS</h3>
+      <p>Implemented Depth-First Search (DFS) and Breadth-First Search (BFS) algorithms to find paths in binary trees.</p>
+      <ul>
+        <li>Mention that you implemented algorithms for finding paths in binary trees using both Depth-First Search (DFS) and Breadth-First Search (BFS) techniques.</li>
+        <li>Highlight any unique features or optimizations you incorporated into your implementation.</li>
+        <li>Optionally, provide a brief description of how DFS and BFS work and their applications in binary tree traversal.</li>
+      </ul>
+    </div>
+    <div class="project">
+      <h3>Graph Clustering and Community Detection: Modularity Optimization</h3>
+      <p>Implemented modularity optimization algorithm for clustering and detecting communities within graphs.</p>
+      <ul>
+        <li>Explain that you implemented a modularity optimization algorithm for clustering and detecting communities within graphs.</li>
+        <li>Highlight any insights or improvements you made to the basic algorithm.</li>
+        <li>Mention any libraries or frameworks you used, such as NetworkX, if applicable.</li>
+      </ul>
+    </div>
+    <div class="project">
+      <h3>Maze Solver: Applying BFS and DFS to Find Paths</h3>
+      <p>Implemented BFS and DFS algorithms to find paths in a maze.</p>
+      <ul>
+        <li>Describe how you used Breadth-First Search (BFS) and Depth-First Search (DFS) algorithms to find paths in a maze.</li>
+        <li>Highlight any maze generation techniques or optimizations you implemented.</li>
+        <li>Optionally, provide examples of different mazes you tested your solver on, along with their sizes and complexities.</li>
+      </ul>
+    </div>
+    <div class="project">
+      <h3>Planarity Testing and Embedding</h3>
+      <p>Analyzed the embeddability of graphs in a plane, focusing on planarity testing and embedding algorithms.</p>
+      <ul>
+        <li>Explain that you analyzed the embeddability of graphs in a plane, specifically focusing on planarity testing and embedding algorithms.</li>
+        <li>Highlight any findings or insights you gained from your analysis.</li>
+        <li>Optionally, mention any real-world applications of planarity testing and embedding, such as circuit design or network layout optimization.</li>
+      </ul>
+    </div>
+    <div class="project">
+      <h3>Topological Sorting: Ordering Dependencies in DAG</h3>
+      <p>Developed an algorithm for ordering dependencies in Directed Acyclic Graphs</p>
+      <ul>
+        <li>Mention that you developed an algorithm for ordering dependencies in Directed Acyclic Graphs (DAGs) using topological sorting.</li>
+        <li>Highlight any optimizations or efficiency improvements you made to the basic algorithm.</li>
+        <li>Optionally, provide examples of real-world scenarios where topological sorting is useful, such as task scheduling or dependency resolution in software development.</li>
+      </ul>
+    </div>
+  </div>
+</section>
+
+
+    <section id="Certificate" class="section">
+      <div class="container">
+        <h2>Certificate Me</h2>
+        <ul>
+          <li><strong>Immersive Python Boot Camp - Premium</strong><br>Rajalakshmi Eduverse<button onclick="alert('Button Clicked!')">Click</button></li> <!-- Highlighted lines with button -->
+          <li><strong>Certified In Principle Of Management</strong><br>Nptel<button onclick="alert('Button Clicked!')">Click</button></li> <!-- Highlighted lines with button -->
+          <li><strong>Industrial Visit</strong><br>Iroid Technologies<button onclick="alert('Button Clicked!')">Click</button></li> <!-- Highlighted lines with button -->
+          <li><strong>Certificate of Participation</strong><br>Asia book of record<button onclick="alert('Button Clicked!')">Click</button></li> <!-- Highlighted lines with button -->
+          <li><strong>Experiential - Project Based Learning Team2Solve & Code2Build</strong><br>Nasscom<button onclick="alert('Button Clicked!')">Click</button></li> <!-- Highlighted lines with button -->
+        </ul>
       </div>
     </section>
 
